tests/cases/smoke/invalid/ternary_non_bool_condition.ty
var count = 1
var label = if count: "yes" else "no"
